# scheduler_api

./: .gitignore  pyproject.toml
src/scheduler_api/: app.py  database.py  init_db.py  models.py  routers.py  schema.py  session.py
src/scheduler_api/routers/: availability.py  bookings.py  users.py
src/scheduler_api/validators/: availability_validator.py  booking_validator.py  date_validator.py  time_validator.py  users_validator.py
tests/: conftest.py  test_create_booking.py  test_create_slot.py  test_create_user.py  test_get_avaliable_slots.py
